Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-128508

TableView: VerticalHeaderView is not in sync with TableView

XMLWordPrintable

    • 379108f11 (dev), d8bab4785 (6.8), 5688d4526 (6.7), 87ab904fc (tqtc/lts-6.5), ef1b9ec85 (tqtc/lts-6.2)

      A VerticalHeaderView will not stay in sync with a TableView if the VerticalHeaderView is higher than the TableView. The SpreadSheets example can be used to verify this bug. If you scroll down, the rows will end up with different heights.

        For Gerrit Dashboard: QTBUG-128508
        # Subject Branch Project Status CR V

            richard Richard Moe Gustavsen
            richard Richard Moe Gustavsen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: